# switchboard-gui

./: package.json  pnpm-lock.yaml
src/: App.svelte  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: DepositsWithdrawals.svelte  Ethereum.svelte  Main.svelte  Zcash.svelte  ZcashDepositsWithdrawals.svelte
