[package]
name = "switchboard-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.65"
switchboard = { git = "https://github.com/nchashch/switchboard" }
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
web3 = "0.18.0"
clap = { version = "4.0.1", features = ["derive"] }
confy = "0.5.0"
dirs = "4.0.0"
futures = { version = "0.3.25", features = ["executor"] }
thiserror = "1.0.38"
ureq = "2.6.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
